--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "homepage": "https://aditya-sridhar.github.io/simple-reactjs-app",
   "dependencies": {
+    "@mui/material": "^5.2.4",
     "axios": "^0.18.0",
-    "react": "^16.4.1",
+    "react": "^17.0.0",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^17.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
-
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,6 +21,7 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.1.2",
     "gh-pages": "^1.2.0"
   }
 }
