--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "homepage": "https://aditya-sridhar.github.io/simple-reactjs-app",
   "dependencies": {
-    "@mui/material": "^5.2.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.5",
     "axios": "^0.18.0",
     "react": "^17.0.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^17.0.0",
+    "react-dropdown": "^1.9.2",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-select": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
