--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.5",
+    "@mui/x-data-grid": "^5.2.1",
+    "apexcharts": "^3.32.1",
     "axios": "^0.18.0",
     "react": "^17.0.0",
     "react-bootstrap": "^0.32.1",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.0",
     "react-dropdown": "^1.9.2",
     "react-loader-spinner": "^4.0.0",
+    "react-radial-bar-chart": "^0.1.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-select": "^5.2.1"
+    "react-select": "^5.2.1",
+    "recharts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
